fixed layout issues in navigation and added selection color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -159,5 +159,9 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  ::selection {
+    @apply bg-primary text-white;
+  }
 }
 
